kubernetes/namespaces/default/pinnwand/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinnwand
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pinnwand
  template:
    metadata:
      labels:
        app: pinnwand
    spec:
      containers:
        - name: pinnwand
          image: ghcr.io/supakeen/pinnwand@sha256:567f846336d82c16a6e324df34e0a7dab000cf76768c24ba8d2fa08b4a5aa760
          command: ["venv/bin/python3", "-m", "pinnwand", "-vvvvvvvv", "--configuration-path", "/config/config.toml", "http"]
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 5m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 8000
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: pinnwand-config
              mountPath: /config/
            - name: pinnwand-logo
              mountPath: /usr/app/pinnwand/static/logo.png
              subPath: logo.png
      volumes:
        - name: pinnwand-logo
          emptyDir: {}
        - name: pinnwand-config
          configMap:
            name: pinnwand-config
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
